--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -20,8 +20,7 @@
     </div>
 </section>
 <!-- breadcrumb part end-->
-
-<!--================ confirmation part start =================-->
+<!--confirmation part start -->
 <section class="confirmation_part section_padding">
   <div class="container">
     <div class="row">
@@ -80,7 +79,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-12 col-lg-6">
           <p class="text-muted">
             <h5>Order Summary:</h5>
@@ -118,7 +116,6 @@
                 <span class="mb-1 mt-0 small text-muted">Country:</span><span> {{ order.country }}</span>
               </li>
             </ul>
-
           </div>
         </div>
       </div>
@@ -126,23 +123,13 @@
     <div class="row">
       <div class="col-lg-12">
         {% if from_profile %}
-        <a class="btn_1 text-white" href="{% url 'profile' %}">Back to Profile</a>
+        <a class="btn_1 text-white" href="{% url 'profile' %}" aria-label="Back to profile">Back to Profile</a>
         {% else %}
-        <a class="btn_1 text-white" href="{% url 'products' %}">Back to Gallery</a>
+        <a class="btn_1 text-white" href="{% url 'products' %}" aria-label="Back to gallery">Back to Gallery</a>
         {% endif %}
       </div>
     </div>
   </div>
-
 </section>
-<!--================ confirmation part end =================-->
-
-
-{% endblock %}
-
-{% block postloadjs %}
-{{ block.super }}
-{{ stripe_public_key|json_script:"id_stripe_public_key" }}
-{{ client_secret|json_script:"id_client_secret" }}
-<script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+<!--confirmation part end -->
 {% endblock %}
