--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,83 +3,85 @@
 
 {% block content %}
 <!-- Banner Part Start-->
-    <section class="banner_part">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-5">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Hanneles Original Art</h1>
-                            <p>Don't buy commodity prints when you can get affordable original paintings!</p>
-                            <a href="{% url 'products' %}" aria-label="Visit our paintings page" class="btn_1 text-white">Buy real
-                                art</a>
-                        </div>
+<section class="banner_part">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-5">
+                <div class="banner_text">
+                    <div class="banner_text_iner">
+                        <h1>Hanneles Original Art</h1>
+                        <p>Don't buy commodity prints when you can get affordable original paintings!</p>
+                        <a href="{% url 'products' %}" aria-label="Visit our paintings page" class="btn_1 text-white">Buy real
+                            art</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="banner_img">
-            <img src="{% static 'img/banner.png' %}" alt="Flower painting" class="img-fluid">
-        </div>
-    </section>
+    </div>
+    <div class="banner_img">
+        <img src="{% static 'img/banner.png' %}" alt="Flower painting" class="img-fluid">
+    </div>
+</section>
 <!-- Banner Part End-->
 
 <!-- Subscribe Part Start -->
-    <section class="subscribe_part section_padding">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="subscribe_part_content">
-                        <div id="mc_embed_shell">
-                            <div id="mc_embed_signup">
-                                <div class="subscribe_form">
-                                    <h2>Subscribe to our Newsletter!</h2>
-                                    <form
-                                        action="https://herokuapp.us21.list-manage.com/subscribe/post?u=88090f70b333bca43697bfe49&amp;id=70e54690fe&amp;f_id=0012f2e6f0"
-                                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                        class="validate" target="_blank">
-                                        <div id="mc_embed_signup_scroll">
-                                            <div class="mc-field-group">
-                                                <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
-                                                    required="" value="" placeholder="Enter your Email address"></div>
-                                            <div id="mce-responses" class="clear foot">
-                                                <div class="response" id="mce-error-response" style="display: none;">
-                                                </div>
-                                                <div class="response" id="mce-success-response" style="display: none;">
-                                                </div>
+<section class="subscribe_part section_padding">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="subscribe_part_content">
+                    <div id="mc_embed_shell">
+                        <div id="mc_embed_signup">
+                            <div class="subscribe_form">
+                                <h2>Subscribe to our Newsletter!</h2>
+                                <form
+                                    action="https://herokuapp.us21.list-manage.com/subscribe/post?u=88090f70b333bca43697bfe49&amp;id=70e54690fe&amp;f_id=0012f2e6f0"
+                                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                    class="validate" target="_blank">
+                                    <div id="mc_embed_signup_scroll">
+                                        <div class="mc-field-group">
+                                            <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
+                                                required="" value="" placeholder="Enter your Email address"></div>
+                                        <div id="mce-responses" class="clear foot">
+                                            <div class="response" id="mce-error-response" style="display: none;">
                                             </div>
-                                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                                /* real people should not fill this in and expect good things - do not
-                                                remove this or risk form bot signups */
-                                                <input type="text" name="b_88090f70b333bca43697bfe49_70e54690fe"
-                                                    tabindex="-1" value="">
-                                            </div>
-                                            <div class="optionalParent">
-                                                <div class="clear foot">
-                                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                                        class="button btn_3" value="Subscribe">
-                                                    <p>Powered by:</p>
-                                                    <p style="margin: 0px auto;"><a href="http://eepurl.com/iIUFVE"
-                                                            title="Mailchimp - email marketing made easy and fun"
-                                                            target="_blank" rel="noopener"
-                                                            aria-label="Visit our Newsletter cooperation partner Mailchimp">
-                                                            <span>
-                                                                <img class="refferal_badge"
-                                                                    src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg"
-                                                                    alt="Intuit Mailchimp"></span></a>
-                                                    </p>
-                                                </div>
+                                            <div class="response" id="mce-success-response" style="display: none;">
                                             </div>
                                         </div>
-                                    </form>
-                                </div>
+                                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                            /* real people should not fill this in and expect good things - do not
+                                            remove this or risk form bot signups */
+                                            <input type="text" name="b_88090f70b333bca43697bfe49_70e54690fe"
+                                                tabindex="-1" value="">
+                                        </div>
+                                        <div class="optionalParent">
+                                            <div class="clear foot">
+                                                <input type="submit" name="subscribe"
+                                                    aria-label="Subscribe to newsletter" id="mc-embedded-subscribe"
+                                                    class="button btn_3" value="Subscribe">
+                                                <p>Powered by:</p>
+                                                <p></p>
+                                                <a href="http://eepurl.com/iIUFVE"
+                                                    title="Mailchimp - email marketing made easy and fun"
+                                                    target="_blank" rel="noopener"
+                                                    aria-label="Visit our Newsletter cooperation partner Mailchimp"></a>
+                                                <span>
+                                                    <img class="refferal_badge"
+                                                        src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg"
+                                                        alt="Intuit Mailchimp">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 <!-- Subscribe Part End -->
 
 <!--::footer_part start::-->
