--- a/home/templates/home/privacy_policy.html
+++ b/home/templates/home/privacy_policy.html
@@ -18,7 +18,7 @@
                         <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree
                             to the collection and use of information in accordance with this Privacy Policy. </p>
                         <p>This Privacy Policy has been created with the help of the
-                            <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">
+                            <a href="https://www.termsfeed.com/privacy-policy-generator/" rel="noopener" target="_blank">
                                 Privacy Policy Generator</a>.
                         </p>
                         <hr>
