--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -84,8 +84,8 @@
         <div class="btn-group float-center">
         <input class="form-control qty-input" type="hidden" name="quantity" value="1" min="0" max="1"
           data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-        <input type="submit" class="btn_1 m-2" role="button" value="Add to cart">      
-        <a href="{% url 'products' %}" class="btn_1 text-white m-2" role="button">Continue shopping</a>
+        <input type="submit" class="btn_1 m-2" role="button" aria-label="Add to shopping cart" value="Add to cart">      
+        <a href="{% url 'products' %}" class="btn_1 text-white m-2" role="button" aria-label="Continue Shopping">Continue shopping</a>
         <input type="hidden" name="redirect_url" value="{{ request.path }}">
       </div>
       </form>
@@ -97,8 +97,8 @@
   <div class="col-12">
     <span>
 <div class="btn-group">
-  <a href="{% url 'edit_product' product.id %}" class="btn_1 text-white m-2" role="button" title="Update">Update</a>
-  <a href="{% url 'delete_product' product.id %}" class="btn_1 text-white m-2 confirm-delete" role="button" title="Delete">Delete</a>
+  <a href="{% url 'edit_product' product.id %}" class="btn_1 text-white m-2" role="button" aria-label="Update" title="Update">Update</a>
+  <a href="{% url 'delete_product' product.id %}" class="btn_1 text-white m-2 confirm-delete" aria-label="Delete" role="button" title="Delete">Delete</a>
 {% endif %}
     </div>
       </span>
