--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -7,9 +7,8 @@
                         <a class="navbar-brand logo-font logo-text" href="{% url 'home' %}">
                             Hanneles Art
                             <p class="logo-subtext">Gallery & Academy</p>
-                        </a>
                     </div>
-                    
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +46,7 @@
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     My Account
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                                <div class="dropdown-menu" id="navbarDropdown_2">
                                     {% if request.user.is_authenticated %}
                                     {% if request.user.is_superuser %}
                                     <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
