Correct typo in webhook handler

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -24,7 +24,7 @@
             <div class="col-lg-4 col-sm-4">
                 <div class="dropdown select_option">
                     <button class="genric-btn primary circle e-large arrow dropdown-toggle dropdown-button-fullwidth"
-                        type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                        type="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false" aria-label="Filter by categories">
                         Categories
                     </button>
@@ -42,7 +42,7 @@
             <div class="col-lg-4 col-sm-4">
                 <div class="dropdown select_option">
                     <button class="genric-btn primary circle e-large arrow dropdown-toggle dropdown-button-fullwidth"
-                        type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                        type="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         Formats
                     </button>
@@ -56,7 +56,7 @@
             <div class="col-lg-4 col-sm-4">
                 <div class="dropdown select_option">
                     <button class="genric-btn primary circle e-large arrow dropdown-toggle dropdown-button-fullwidth"
-                        type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                        type="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false" aria-label="Sort by price">
                         Sort by price
                     </button>
@@ -115,7 +115,8 @@
                                         <a href="{% url 'delete_product' product.id %}"
                                             class="btn_1 text-white small primary-border px-3 py-1 confirm-delete"
                                             role="button" aria-label="Delete">Delete
-                                        </a></span>
+                                        </a>
+                                    </span>
                                     {% endif %}
                                 </div>
                             </p>
