--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -28,7 +28,7 @@
                         aria-expanded="false" aria-label="Filter by categories">
                         Categories
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu">
                         <a class="dropdown-item" href="{% url 'products' %}?category=flowers" aria-label="Filter by category flowers">Flowers</a>
                         <a class="dropdown-item" href="{% url 'products' %}?category=animals" aria-label="Filter by category animals">Animals</a>
                         <a class="dropdown-item" href="{% url 'products' %}?category=landscape" aria-label="Filter by category landscape">Landscape</a>
@@ -46,7 +46,7 @@
                         aria-expanded="false">
                         Formats
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu">
                         <a class="dropdown-item" href="{% url 'products' %}?format=Portrait" aria-label="Filter by portrait format">Portrait</a>
                         <a class="dropdown-item" href="{% url 'products' %}?format=Landscape" aria-label="Filter by landscape format">Landscape</a>
                         <a class="dropdown-item" href="{% url 'products' %}?format=Square" aria-label="Filter by square format">Square</a>
@@ -60,7 +60,7 @@
                         aria-expanded="false" aria-label="Sort by price">
                         Sort by price
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu">
                         <a class="dropdown-item" href="{% url 'products' %}?sort=price&direction=asc" aria-label="Sort from low to high">Low to high</a>
                         <a class="dropdown-item" href="{% url 'products' %}?sort=price&direction=desc" aria-label="Sort from high to low">High to low</a>
                     </div>
@@ -104,16 +104,20 @@
                             <p>Price: € {{ product.price }}
                                 {% endif %}
                                 <div class="button-group area mt-2">
-                                    <span><a href="{% url 'product_detail' product.id %}"
+                                    <span>
+                                        <a href="{% url 'product_detail' product.id %}"
                                             class="btn_1 text-white small primary-border px-3 py-1"
                                             role="button" aria-label="Details">Details
                                         </a>
+                                    </span>
+                                    <span>
                                         {% if request.user.is_superuser %}
                                         <a href="{% url 'edit_product' product.id %}"
                                             class="btn_1 text-white small primary-border px-3 py-1" role="button" aria-label="Update">Update
                                         </a>
-                                        <a href="{% url 'delete_product' product.id %}"
-                                            class="btn_1 text-white small primary-border px-3 py-1 confirm-delete"
+                                    </span>
+                                    <span>
+                                        <a class="btn_1 text-white small primary-border px-3 py-1 confirm-delete"
                                             role="button" aria-label="Delete">Delete
                                         </a>
                                     </span>
@@ -130,13 +134,12 @@
     <div class="back-to-top">
         <p>
             <a class="btt-link h-100">
-                <i class="fa-regular fa-circle-up" aria-label="back to top"></i>
+                <i class="fa-regular fa-circle-up"></i>
             </a>
         </p>    	
     </div>
 </section>
 <!-- product list part end-->
-
 {% endblock %}
 
 {% block postloadjs %}
