--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,5 +1,5 @@
 /* Bootstrap collapse */
-.collapse {
+/* .collapse {
     &:not(.show) {
       display: none;
     }
@@ -9,7 +9,7 @@
     height: 0;
     overflow: hidden;
     @include transition($transition-collapse);
-  }
+  } */
 
 
 /* Customer Testimonials */
