Set autohid of toast to 5 for info and warnings and to 7 seconds for success

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,7 @@
     </script>
     <script>
         $('.owl-carousel').owlCarousel({
-            loop:true,
+            loop:false,
             margin:20,
             nav:false,
             responsive:{
