--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
 <hr>
 
 <!-- Review Slider Start -->
-<div class="container mt-3">
+<!-- <div class="container mt-3">
     <div class="row">
         <div class="col-lg-12">
             <div class="breadcrumb_iner text-center ">
@@ -34,10 +34,25 @@
                 <h3 class="review_heading">{{ average_rating.rating|floatformat:1 }} out of 5.0</h3>
             </div>
         </div>
-    </div>
-</div>
+    </div> -->
+
 {% include 'includes/slider.html' %}
 <!-- Review Slider End -->
+<!-- Add Review option start -->
+<div class="container p-3">
+<div class="col text-center">
+{% if request.user.is_authenticated %}
+{% if add_review %}
+<h5 class="review_heading"><a href="{% url 'reviews' %}">Add review</a></h5>
+{% endif %}
+{% else %}
+<p>
+    <h5 class="review_heading">Please <a href="{% url 'account_login' %}">Log in</a> to add a review.</h5>
+</p>
+{% endif %}
+</div>
+</div>
+<!-- Add Review option end -->
 <!-- Subscribe Part Start -->
 <section class="subscribe_part section_padding">
     <div class="container">
