--- a/templates/includes/slider.html
+++ b/templates/includes/slider.html
@@ -1,4 +1,13 @@
-<section class="cart_area section_padding">
+<section class="p-3">
+  <div class="container mt-3">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="breadcrumb_iner text-center ">
+                <h2 class="review_heading">What our customers say</h2>
+                <h3 class="review_heading">{{ average_rating.rating|floatformat:1 }} out of 5.0</h3>
+            </div>
+        </div>
+    </div>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -7,10 +16,7 @@
           <div class="item mx-2">
             <div class="card owl-card text-center border-0">
               <div class="card-body border-0">
-                <h6 class="yellow_star">
-                  {% if r.rating == 5 %}★★★★★{% elif r.rating == 4 %}★★★★☆{% elif r.rating == 3 %}★★★☆☆{% elif r.rating == 2 %}★★☆☆☆{% else %}★☆☆☆☆{% endif %}
-                </h6>
-                <h6 class="card-subtitle mb-2 text-muted">{{ r.rating }}</h6>
+                <h6>{% for s in r.rating|ljust:r.rating %}<i class="fas fa-star"></i> {% endfor %}</h6>
                 <h5 class="card-title">{{ r.review_title }}</h5>
                 <p class="card-text font-italic">"{{ r.review_body }}"</p>
                 <br>
