--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,5 +1,5 @@
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
-  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="true" data-delay="5000">
     <div class="toast-header text-info text-uppercase">
       <i class="fa-solid fa-circle-info text-info pr-1"></i>
       <strong class="mr-auto">Information!</strong>
