--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,5 +1,5 @@
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
-  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="true" data-delay="7000">
     <div class="toast-header text-success text-uppercase">
       <i class="fa-regular fa-circle-check text-success pr-1"> </i>
       <strong class="mr-auto">Success!</strong>
