Remove leading slash in the linkt to the owl-carousel js-file

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/aec9602b9e.js" crossorigin="anonymous"></script>
     <!-- Owl Carousel -->
-    <script src="{% static '/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
