--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -3,7 +3,7 @@
 
 {% block extra_css %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static '/css/allauth.css' %}">
+<link rel="stylesheet" href="{% static 'css/allauth.css' %}">
 {% endblock %}
 
 {% block content %}
