--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,35 +24,19 @@
 </section>
 <!-- Banner Part End-->
 <hr>
-
-<!-- Review Slider Start -->
-<!-- <div class="container mt-3">
-    <div class="row">
+<div class="container">
+    <div class="row mb-2">
         <div class="col-lg-12">
-            <div class="breadcrumb_iner text-center ">
-                <h2 class="review_heading">What our customers say</h2>
-                <h3 class="review_heading">{{ average_rating.rating|floatformat:1 }} out of 5.0</h3>
+            <div class="breadcrumb_iner text-center">
+                <a href="{% url 'reviews' %}"><h2 class="review_heading">What our customers say</h2></a>
             </div>
         </div>
-    </div> -->
-
+    </div>
+</div>
+<!-- Review Slider  -->
 {% include 'includes/slider.html' %}
-<!-- Review Slider End -->
-<!-- Add Review option start -->
-<div class="container p-3">
-<div class="col text-center">
-{% if request.user.is_authenticated %}
-{% if add_review %}
-<h5 class="review_heading"><a href="{% url 'reviews' %}">Add review</a></h5>
-{% endif %}
-{% else %}
-<p>
-    <h5 class="review_heading">Please <a href="{% url 'account_login' %}">Log in</a> to add a review.</h5>
-</p>
-{% endif %}
-</div>
-</div>
-<!-- Add Review option end -->
+<!-- Review Slider  -->
+
 <!-- Subscribe Part Start -->
 <section class="subscribe_part section_padding">
     <div class="container">
