--- a/home/templates/home/reviews.html
+++ b/home/templates/home/reviews.html
@@ -9,7 +9,7 @@
           <div class="col-lg-12">
               <div class="breadcrumb_iner">
                   <h2>What our customers say</h2>
-                  <h3>{{ average_rating.rating|floatformat:1 }} out of 5.0</h3>
+                  <h3>Average customer rating: {{ average_rating.rating|floatformat:1 }} out of 5.0</h3>
               </div>
           </div>
       </div>
@@ -17,23 +17,38 @@
 </section>
 <!-- breadcrumb part end-->
 
+
 {% include 'includes/slider.html' %}
 
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-8">
-      <h3>Add your review</h3>
-      <form action="" method="POST">
-        {% csrf_token %}
-        <p>{{ review_form|crispy }}</p>
-        <button class="btn_1" type="submit">Submit</button>
-      </form>
-      
-    </div>
+<!-- Add Review option start -->
+<div class="container p-3 mt-2">
+  <div class="col text-center">
+    {% if user.is_anonymous %}
+    <h5 class="review_heading">Please <a href="{% url 'account_login' %}">Log in</a> to add a review.</h5>
+    {% endif %}
+    {% if request.user.is_authenticated %}
+      {% if add_review %}
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h3>Add your review</h3>
+            <form method="POST">
+              {% csrf_token %}
+              <p>{{ review_form|crispy }}</p>
+              <button class="btn_1" type="submit">Submit</button>
+            </form>      
+          </div>
+        </div>
+      </div>
+      {% else %}
+      <hr>
+      <p><strong>{{ user.username }}</strong>, you have already submitted a review!</p>
+      {% endif %}
+    {% endif %}
   </div>
-  
 </div>
+  <!-- Add Review option end -->
+
 
 
 {% endblock content %}
