--- a/templates/includes/slider.html
+++ b/templates/includes/slider.html
@@ -1,21 +1,13 @@
-<section class="p-3">
-  <div class="container mt-3">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="breadcrumb_iner text-center ">
-                <h2 class="review_heading">What our customers say</h2>
-                <h3 class="review_heading">{{ average_rating.rating|floatformat:1 }} out of 5.0</h3>
-            </div>
-        </div>
-    </div>
-  <div class="container">
+<section class="p-2">
+
+  <div class="container mb-2">
     <div class="row">
       <div class="col-md-12">
         <div class="row owl-carousel owl-theme border-0">
           {% for r in reviews %}
-          <div class="item mx-2">
-            <div class="card owl-card text-center border-0">
-              <div class="card-body border-0">
+          <div class="item mx-2 border-0">
+            <div class="card text-center border-0">
+              <div class="card-body">
                 <h6>{% for s in r.rating|ljust:r.rating %}<i class="fas fa-star"></i> {% endfor %}</h6>
                 <h5 class="card-title">{{ r.review_title }}</h5>
                 <p class="card-text font-italic">"{{ r.review_body }}"</p>
